--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "a-fresh",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start:server": "nodemon server.js"
-  },
   "dependencies": {
+    "aws-sdk": "^2.965.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
-    "multer": "^1.4.2",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "pdfkit": "^0.12.1",
     "tslib": "^2.0.0",
     "twilio": "^3.63.1"
