--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "a-fresh",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start:server": "nodemon server.js"
+  },
   "dependencies": {
     "aws-sdk": "^2.965.0",
     "body-parser": "^1.19.0",
@@ -12,6 +15,7 @@
     "mongoose": "^5.12.13",
     "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
+    "otplib": "^12.0.1",
     "pdfkit": "^0.12.1",
     "tslib": "^2.0.0",
     "twilio": "^3.63.1"
